--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/mattt-liu/hackwestern7-finance-app#readme",
   "dependencies": {
     "@angular/cli": "^11.0.2",
+    "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ng2-charts": "^2.4.2",
     "node": "^15.2.1"
   }
 }
