--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "ng2-charts": "^2.4.2",
     "node": "^15.2.1"
   }
