--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.1",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
