--- a/my-app/tsconfig.app.json
+++ b/my-app/tsconfig.app.json
@@ -5,6 +5,7 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
+  //"angularCompilerOptions": { "enableIvy": false },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
